# manhuaplus-scraping

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-build.sh  docker-compose.yml  main.py  manhuaplus-series.toml  nohup.out  pyproject.toml  run-in-docker.sh  run-scraper.sh  run-scraping.sh  series.toml  settings.toml  start-service.sh
docker/: database.json
manhuaplus_scraping/: __main__.py
src/manhuaplus_scraping/: __init__.py  __main__.py  _logging.py  _logging.toml  discord_bot.py  logging.py  manhua.py  scraper.py  settings.py  settings.toml  store.py
src/manhuaplus_scraping/settings/: logging.toml  settings.toml
src/series_scraping/: __main__.py  database.py  discord_bot.py  logging.py  scraper.py  settings.py  types.py
src/series_scraping/cli/: __init__.py  scrape.py  serie.py
src/series_scraping/series/: __init__.py  scraper.py  strategies.py
