[tool.poetry]
name = "manhuaplus-scraping"
version = "2023.3.26.0"
description = "Manhuaplus scraping service"
authors = ["Jairo <jairo.araujo.silva@gmail.com>"]
packages = [{ include = "manhuaplus_scraping", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.5"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"
gevent = "^22.10.2"
tomli = "^2.0.1"
grequests = "^0.6.0"
arrow = "^1.2.3"
discord-py = "^2.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
pretty = true
