[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "series-scraping"
version = "2023.5.17.0"
requires-python = "~=3.10"
authors = [
    { name = "Jairo", email = "jairo.araujo.silva@gmail.com" }
]
dependencies = [
    "beautifulsoup4 ~= 4.12.0",
    "lxml ~= 4.9",
    "tomli ~= 2.0",
    "arrow ~= 1.2",
    "py-cord ~= 2.4",
    "requests ~= 2.28",
    "tinydb ~= 4.7",
    "typer"
]

[tool.hatch.envs.default]
path = ".venv"
dependencies = [ "pre-commit" ]

[tool.hatch.envs.default.scripts]
scrape = "python -m series_scraping scrape start"

[tool.ruff]
ignore = [ "F401" ]
