[tool.poetry]
name = "series-scraping"
version = "2023.5.17.0"
description = ""
authors = ["Jairo <jairo.araujo.silva@gmail.com>"]
packages = [{include = "series_scraping", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
tomli = "^2.0.1"
arrow = "^1.2.3"
py-cord = "^2.4.1"
requests = "^2.31.0"
tinydb = "^4.7.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F401"]
